--- a/generators/app/templates/src/components/HomeComponent/home.css
+++ b/generators/app/templates/src/components/HomeComponent/home.css
@@ -1,1 +1,15 @@
-/*Styles related to Home Page*/
+#app{
+    height:100vh;
+}
+
+.heading{
+    display: inline-block;
+    position: relative;
+    top: 30px;
+}
+
+.jumbo{
+    background-color:#197690;
+    color:#61dafb;
+    height:100vh;
+}
